fix overflow-x: hidden;

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
   scroll-behavior: smooth;
 }
 
+html {
+  overflow-x: hidden;
+} 
+
 section {
   min-height: 100vh;
 }
